configuration_examples/multi-tenants-example/tenant1-development.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant1
  labels:
    environment: tenant1-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  namespace: tenant1
  labels:
    app: myapp
    environment: tenant1-dev
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
        environment: tenant1-dev
    spec:
      serviceAccountName: tenant1
      containers:
        - name: myapp-container
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: tenant1
  labels:
    app: myapp
    environment: tenant1-dev
spec:
  type: ClusterIP 
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
